Authorization api jwt, Swagger api specification for authorization
