# app/Http/Controllers/Swagger/MainController.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Http\Controllers\Swagger;
+
+use App\Http\Controllers\Controller;
+
+/**
+ * @OA\Compontents(
+ *     @OA\SecurityScheme(
+ *         securityScheme="bearerAuth",
+ *         type="http",
+ *         scheme="bearer"
+ *     )
+ * )
+ */
+
+class MainController extends Controller
+{
+
+}
